--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -173,11 +173,11 @@ header {
 /* Lớp phủ chứa kính lúp (mặc định ẩn) */
 .hover-overlay {
   position: absolute;
-  top: 0;
+  top: 85px;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.1); /* Màu tối mờ nhẹ */
+
   display: flex;
   justify-content: center;
   align-items: center;
